--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <!--RESPONSIVE NAVBAR-->
     <nav class="bg-green-100 p-3 flex justify-between items-center shadow-xl sticky top-0 z-10" >
         <h1 class="text-2xl">GREENDEN</h1>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 md:hidden" >
+        <svg id="snav" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-10 md:hidden" >
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
           
@@ -29,6 +29,23 @@
             </li>
         </ul>
     </nav>
+
+     <!-- SIDEBAR -->
+     <section class="bg-green-100 fixed z-30 top-0 right-0 transition-all duration-1000" id="sidenav" style="width: 40%; height: 100vh;right: -40%;">
+        <div class="cancel" style="position: absolute; right: 5%; ">X</div>
+        <ul class="flex gap-5 justify-center items-center flex-col text-gray-600 md:flex m-5">
+            <li class="hover:underline hover:text-black">
+                <a href="#">HOME</a>
+            </li>
+            <li class="hover:underline hover:text-black">
+                <a href="products.html" target="_blank">PRODUCTS</a>
+            </li>
+            <li class="hover:underline hover:text-black">
+                <a href="contact.html" target="_blank">CONTACT US</a>
+            </li>
+        </ul>
+
+    </section>
 
     <!--CONTACT US-->
     <section class="bg-white dark:bg-gray-900">
@@ -59,6 +76,9 @@
         <p class="p-5">The perfect destination to find you're favourite plants!</p>
         <p class="p-5">&copy;greenden.com</p>
     </section>
+
+    <!-- JAVASCRIPT SECTION -->
+    <script src="contact.js"></script>
 
 </body>
 </html>
